Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31220

Building Qt for android under windows requires xkbcommon

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.1.0 RC1
    • 5.1.0 Beta 1
    • QPA
    • None
    • Android
    • 7582bb51f39f2336e9d14b83206873bbb3e47de3

    Description

      Trying to build Qt 5.1.0 for android under windows, the compilation will stop when compiling "qtablegenerator.cpp".

      Step to reproduce:

      • After a while compilation will stop giving the following error:

        generator\qtablegenerator.cpp:51:33: fatal error: xkbcommon/xkbcommon.h: No such file or directory
        compilation terminated.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            raydonnelly Ray Donnelly
            allanba Alan Bates
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes