Android: Disable xkbcommon in configure.exe

Task-number: QTBUG-31220

Change-Id: I711fa5d37cb58216199cc0ce479a14a3300d8cb8
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>